[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "packedtrie"
version = "0.1.0"
description = "Flat-packed memory-efficient prefix trie"
readme = "README.md"
license = { file = "License" }
requires-python = ">=3.10"
authors = [{ name = "VArgenti" }]
dependencies = []

[tool.setuptools]
py-modules = ["PackedTrie"]